# wflogreg

./: README.md  pyproject.toml  requirements.txt  workflow.ipynb  workflow_example.ipynb
