[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wflogreg"
version = "0.0.1"
authors = [
  { name="Akmal Fadhlurrahman", email="akmal.fadhlurrahman@outlook.com" },
]
description = "A standardized workflow to create logistic regression model"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/akmalf/wflogreg"
"Bug Tracker" = "https://github.com/akmalf/wflogreg/issues"